feat: add PgAdmin setup